--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+.card {
+  display: flex;
+  text-decoration: none;
+  flex-direction: row;
+  margin: 30px;
+  justify-content: center;
+}
+.text-description {
+  display: flex;
+  flex-direction: column;
+  margin-left: 70px;
+}
+img {
+  margin: 20px;
+}
+p {
+  text-decoration: none;
+}
